feat: add endpoint to download container image archive file
