# src/presentation/api/controller/containerImage.go
@@ -1,13 +1,20 @@
 package apiController
 
 import (
+	"net/http"
+
 	"github.com/labstack/echo/v4"
+	"github.com/speedianet/control/src/domain/dto"
+	"github.com/speedianet/control/src/domain/useCase"
+	"github.com/speedianet/control/src/domain/valueObject"
+	"github.com/speedianet/control/src/infra"
 	"github.com/speedianet/control/src/infra/db"
 	apiHelper "github.com/speedianet/control/src/presentation/api/helper"
 	"github.com/speedianet/control/src/presentation/service"
 )
 
 type ContainerImageController struct {
+	persistentDbSvc       *db.PersistentDatabaseService
 	containerImageService *service.ContainerImageService
 }
 
@@ -16,6 +23,7 @@ func NewContainerImageController(
 	trailDbSvc *db.TrailDatabaseService,
 ) *ContainerImageController {
 	return &ContainerImageController{
+		persistentDbSvc:       persistentDbSvc,
 		containerImageService: service.NewContainerImageService(persistentDbSvc, trailDbSvc),
 	}
 }
@@ -40,7 +48,7 @@ func (controller *ContainerImageController) Read(c echo.Context) error {
 // @Accept       json
 // @Produce      json
 // @Security     Bearer
-// @Param        createContainerSnapshotImageDto 	  body    dto.CreateContainerSnapshotImage  true  "Asynchronous Snapshot Image Creation"
+// @Param        createContainerSnapshotImageDto 	  body    dto.CreateContainerSnapshotImage  true  "CreateContainerSnapshotImageDto"
 // @Success      201 {object} object{} "ContainerSnapshotImageCreationScheduled"
 // @Router       /v1/container/image/snapshot/ [post]
 func (controller *ContainerImageController) CreateSnapshot(c echo.Context) error {
@@ -72,6 +80,49 @@ func (controller *ContainerImageController) Export(c echo.Context) error {
 
 	return apiHelper.ServiceResponseWrapper(
 		c, controller.containerImageService.Export(requestBody, true),
+	)
+}
+
+// DownloadContainerImageArchiveFile	 godoc
+// @Summary      DownloadContainerImageArchiveFile
+// @Description  Download a container image archive file.
+// @Tags         containerImage
+// @Accept       json
+// @Produce      octet-stream
+// @Security     Bearer
+// @Param        accountId 	  path   string  true  "AccountId"
+// @Param        imageId 	  path   string  true  "ImageId"
+// @Success      200 file file "ContainerImageArchiveFile"
+// @Router       /v1/container/image/archive/{accountId}/{imageId}/ [get]
+func (controller *ContainerImageController) ReadArchiveFile(c echo.Context) error {
+	if c.Param("accountId") == "" {
+		return apiHelper.ResponseWrapper(c, http.StatusBadRequest, "AccountIdRequired")
+	}
+	accountId, err := valueObject.NewAccountId(c.Param("accountId"))
+	if err != nil {
+		return apiHelper.ResponseWrapper(c, http.StatusBadRequest, err.Error())
+	}
+
+	if c.Param("imageId") == "" {
+		return apiHelper.ResponseWrapper(c, http.StatusBadRequest, "ImageIdRequired")
+	}
+	imageId, err := valueObject.NewContainerImageId(c.Param("imageId"))
+	if err != nil {
+		return apiHelper.ResponseWrapper(c, http.StatusBadRequest, err.Error())
+	}
+
+	containerImageQueryRepo := infra.NewContainerImageQueryRepo(controller.persistentDbSvc)
+
+	readDto := dto.NewReadContainerImageArchiveFile(accountId, imageId)
+
+	archiveFile, err := useCase.ReadContainerImageArchiveFile(containerImageQueryRepo, readDto)
+	if err != nil {
+		return apiHelper.ResponseWrapper(c, http.StatusInternalServerError, err.Error())
+	}
+
+	return c.Attachment(
+		archiveFile.UnixFilePath.String(),
+		archiveFile.UnixFilePath.ReadFileName().String(),
 	)
 }
 
