# src/presentation/api/router.go
@@ -95,6 +95,9 @@ func (router *Router) containerRoutes() {
 	containerImageGroup.GET("/", containerImageController.Read)
 	containerImageGroup.POST("/snapshot/", containerImageController.CreateSnapshot)
 	containerImageGroup.POST("/export/", containerImageController.Export)
+	containerImageGroup.GET(
+		"/archive/:accountId/:imageId/", containerImageController.ReadArchiveFile,
+	)
 	containerImageGroup.DELETE("/:accountId/:imageId/", containerImageController.Delete)
 }
 
